Add 'Get Key' button for Groq API

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
           <input type="text" id="grokApiKey" class="mt-1 py-1 px-3 bg-gray-100 darkmode:bg-gray-700 rounded border border-gray-300 text-sm w-full md:w-64" placeholder="Paste your Grok API Key here">
         </label>
         <button id="grokSaveBtn" class="bg-indigo-500 text-white px-3 py-1 rounded hover:bg-indigo-700 text-sm">Verify API Key</button>
+        <a href="https://console.groq.com/keys" target="_blank" class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-700 text-sm ml-2">Get Key</a>
         <span id="grokApiStatus" class="ml-2 text-xs"></span>
       </div>
       <div id="grokApiAuthMessage" class="mt-2 text-xs text-center text-indigo-600 hidden">
